# swagger.json
@@ -16,12 +16,43 @@
     "http",
     "https"
   ],
-  "consumes": ["application/json"],
-  "produces": ["application/json"],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
-    "/request/Metadata": {
+    "File Upload": {},
+    "/api/file/uploadFile": {
       "post": {
-        "tags": ["Blood Group"],
+        "summary": "Image Inserted",
+        "tags": [
+          "Image"
+        ],
+        "consumes": "application/json",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "formData",
+            "name": "profile_image",
+            "type": "file"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/request/Metadata": {
+      "post": {
+        "tags": [
+          "Blood Group"
+        ],
         "required": [],
         "properties": {
           "bloodgroup": {
@@ -31,10 +62,12 @@
         }
       }
     },
-    "/request/bloodAllGroup": {
+    "/api/bloodgroup/bloodAllGroup": {
       "get": {
         "summary": "Select blood",
-        "tags": ["Blood Group"],
+        "tags": [
+          "Blood Group"
+        ],
         "responses": {
           "200": {
             "description": ""
@@ -42,38 +75,26 @@
         }
       }
     },
-    "/user/uploadFile": {
-      "post": {
-        "summary": "Image Inserted",
-        "tags": ["User"],
-        "consumes": "application/json",
-        "produces": ["application/json"],
-        "parameters": [{
-          "in": "formData",
-          "name": "profile_image",
-          "type": "file"
-        }],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/admin/create-admin": {
+    "/api/admin/createAdmin": {
       "post": {
         "summary": "Create Admin",
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "consumes": "application/json",
-        "produces": ["application/json"],
-        "parameters": [{
-          "name": "name",
-          "in": "body",
-          "description": "create admin",
-          "schema": {
-            "$ref": "#/definitions/Admin"
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "body",
+            "description": "create admin",
+            "schema": {
+              "$ref": "#/definitions/Admin"
+            }
           }
-        }],
+        ],
         "responses": {
           "200": {
             "description": ""
@@ -81,64 +102,87 @@
         }
       }
     },
-    "/reservation/createReservation": {
+    "/api/reservation/createReservation": {
       "post": {
         "summary": "Create Reservation",
-        "tags": ["Reservation"],
+        "tags": [
+          "Reservation"
+        ],
         "consumes": "application/json",
-        "produces": ["application/json"],
-        "parameters": [{
-          "name": "authorization",
-          "in": "header",
-          "required": true
-        }, {
-          "name": "name",
-          "in": "body",
-          "description": "create reservation",
-          "schema": {
-            "$ref": "#/definitions/donateblood"
-          }
-        }],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/user/createUser": {
-      "post": {
-        "summary": "Create User",
-        "tags": ["User"],
-        "consumes": "application/json",
-        "produces": ["application/json"],
-        "parameters": [{
-          "name": "name",
-          "in": "body",
-          "description": "create user",
-          "schema": {
-            "$ref": "#/definitions/User"
-          }
-        }],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/user/updateUser": {
-      "put": {
-        "summary": "User Updated",
-        "tags": ["User"],
-        "consumes": "application/json",
-        "produces": ["application/json"],
-        "parameters": [{
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
             "name": "authorization",
             "in": "header",
             "required": true
           },
-
+          {
+            "name": "name",
+            "in": "body",
+            "description": "create reservation",
+            "schema": {
+              "$ref": "#/definitions/donateblood"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "user": {},
+    "/api/user/createUser": {
+      "post": {
+        "summary": "Create User",
+        "tags": [
+          "User"
+        ],
+        "consumes": "application/json",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "body",
+            "description": "create user",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/user/updateUser": {
+      "put": {
+        "summary": "User Updated",
+        "tags": [
+          "User"
+        ],
+        "consumes": "application/json",
+        "produces": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "user id"
+          },
           {
             "name": "name",
             "in": "body",
@@ -155,19 +199,23 @@
         }
       }
     },
-    "/user/loginUser": {
+    "/api/user/loginUser": {
       "post": {
         "summary": "Login User",
-        "tags": ["User"],
+        "tags": [
+          "User"
+        ],
         "consumes": "multipart/form-data",
-        "parameters": [{
-          "name": "name",
-          "in": "body",
-          "description": "update an Employee detail",
-          "schema": {
-            "$ref": "#/definitions/login"
+        "parameters": [
+          {
+            "name": "name",
+            "in": "body",
+            "description": "update an Employee detail",
+            "schema": {
+              "$ref": "#/definitions/login"
+            }
           }
-        }],
+        ],
         "responses": {
           "200": {
             "description": ""
@@ -175,17 +223,21 @@
         }
       }
     },
-    "/user/forgetPassword": {
+    "/api/user/forgetPassword": {
       "put": {
-        "tags": ["User"],
-        "parameters": [{
-          "name": "name",
-          "in": "body",
-          "description": "forget password",
-          "schema": {
-            "$ref": "#/definitions/updatepassword"
+        "tags": [
+          "User"
+        ],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "body",
+            "description": "forget password",
+            "schema": {
+              "$ref": "#/definitions/updatepassword"
+            }
           }
-        }],
+        ],
         "responses": {
           "200": {
             "description": ""
@@ -193,15 +245,18 @@
         }
       }
     },
-    "/user/getAllUser": {
+    "/api/user/getAllUser": {
       "get": {
         "summary": "Select Employee",
-        "tags": ["User"],
-        "parameters": [{
-          "name": "authorization",
-          "in": "header",
-          "required": true
-        }],
+        "tags": [
+          "User"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [],
         "responses": {
           "200": {
             "description": ""
@@ -209,24 +264,26 @@
         }
       }
     },
-    "/user/getUserById": {
-      "tags": ["User"],
-      "parameters": [{
-          "name": "authorization",
-          "in": "header",
-          "required": true
-        },
-        {
-          "name": "id",
-          "in": "path",
-          "required": true,
-          "description": "ID of User that we want to select",
-          "type": "string"
-        }
-      ],
+    "/api/user/getUserById": {
       "get": {
         "summary": "Select User",
-        "tags": ["User"],
+        "tags": [
+          "User"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "required": true,
+            "description": "ID of User that we want to select",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": ""
@@ -234,17 +291,20 @@
         }
       }
     },
-    "/user/deleteUser": {
+    "/api/user/deleteUser": {
       "delete": {
-        "tags": ["User"],
-        "parameters": [{
-            "name": "authorization",
-            "in": "header",
-            "required": true
-          },
+        "tags": [
+          "User"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
           {
             "name": "id",
-            "in": "path",
+            "in": "query",
             "required": true,
             "description": "ID of Employee that we want to delete",
             "type": "string"
@@ -258,19 +318,18 @@
         }
       }
     },
-    "/request/createRequest": {
-      "parameters": [{
-        "name": "authorization",
-        "in": "header",
-        "required": true
-      }],
+    "Request": {},
+    "/api/request/createRequest": {
       "post": {
-        "tags": ["Request Blood"],
-        "parameters": [{
-            "name": "authorization",
-            "in": "header",
-            "required": true
-          },
+        "tags": [
+          "Request Blood"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
           {
             "name": "name",
             "in": "body",
@@ -287,22 +346,32 @@
         }
       }
     },
-    "/request/updateRequestById": {
-      "parameters": [{
-        "name": "authorization",
-        "in": "header",
-        "required": true
-      }],
+    "/api/request/updateRequestById": {
+      "parameters": [],
       "put": {
-        "tags": ["Request Blood"],
-        "parameters": [{
-          "name": "name",
-          "in": "body",
-          "description": "Update Request",
-          "schema": {
-            "$ref": "#/definitions/requestblood"
+        "tags": [
+          "Request Blood"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
           }
-        }],
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "user id"
+          },
+          {
+            "name": "name",
+            "in": "body",
+            "description": "Update Request",
+            "schema": {
+              "$ref": "#/definitions/requestblood"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": ""
@@ -310,30 +379,39 @@
         }
       }
     },
-    "/request/getRequestById": {
-      "tags": ["Request Blood"],
-      "parameters": [{
-          "name": "authorization",
-          "in": "header",
-          "required": true
-        },
-        {
-          "name": "id",
-          "in": "path",
-          "required": true,
-          "description": "ID of Request that we want to select",
-          "type": "string"
-        }
-      ],
+    "/api/request/getRequestById": {
       "get": {
         "summary": "Select Request",
-        "tags": ["Request Blood"],
+        "tags": [
+          "Request Blood"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "required": true,
+            "description": "ID of Request that we want to select",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": ""
           }
         }
       }
+    }
+  },
+  "securityDefinitions": {
+    "bearerAuth": {
+      "type": "apiKey",
+      "name": "token",
+      "in": "header"
     }
   },
   "definitions": {
@@ -515,7 +593,10 @@
       }
     },
     "updatepassword": {
-      "required": ["email", "password"],
+      "required": [
+        "email",
+        "password"
+      ],
       "properties": {
         "email": {
           "type": "string",
@@ -528,7 +609,10 @@
       }
     },
     "login": {
-      "required": ["email", "password"],
+      "required": [
+        "email",
+        "password"
+      ],
       "properties": {
         "email": {
           "type": "string",
